Left align Home page excerpts (fix #14)

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -185,20 +185,6 @@ a {
   }
 }
 
-.excerpts {
-  h2 {
-    text-align: center;
-  }
-
-  p {
-    text-align: justify;
-  }
-}
-
-.more-link {
-  margin-left: 20px;
-}
-
 .portrait cite {
   display: block;
   font-size: 12px;
